--- a/LSY/lsy-admin/src/main/resources/templates/erp/delivery/add.html
+++ b/LSY/lsy-admin/src/main/resources/templates/erp/delivery/add.html
@@ -7,43 +7,43 @@
 <body class="white-bg">
     <div class="wrapper wrapper-content animated fadeInRight ibox-content">
         <form class="form-horizontal m" id="form-delivery-add">
-            <div class="form-group">    
+            <div class="form-group">
                 <label class="col-sm-3 control-label">省份：</label>
                 <div class="col-sm-8">
                     <input name="region" class="form-control" type="text">
                 </div>
             </div>
-            <div class="form-group">    
+            <div class="form-group">
                 <label class="col-sm-3 control-label">业务员：</label>
                 <div class="col-sm-8">
                     <input name="saler" class="form-control" type="text">
                 </div>
             </div>
-            <div class="form-group">    
+            <div class="form-group">
                 <label class="col-sm-3 control-label">代理人：</label>
                 <div class="col-sm-8">
                     <input name="agenter" class="form-control" type="text">
                 </div>
             </div>
-            <div class="form-group">    
+            <div class="form-group">
                 <label class="col-sm-3 control-label">收货人：</label>
                 <div class="col-sm-8">
                     <input name="receiver" class="form-control" type="text">
                 </div>
             </div>
-            <div class="form-group">    
+            <div class="form-group">
                 <label class="col-sm-3 control-label">物流单号：</label>
                 <div class="col-sm-8">
                     <input name="trackingNumber" class="form-control" type="text">
                 </div>
             </div>
-            <div class="form-group">    
+            <div class="form-group">
                 <label class="col-sm-3 control-label">客户名称：</label>
                 <div class="col-sm-8">
                     <input name="customer" class="form-control" type="text">
                 </div>
             </div>
-            <div class="form-group">    
+            <div class="form-group">
                 <label class="col-sm-3 control-label">付款日期：</label>
                 <div class="col-sm-8">
                     <div class="input-group date">
@@ -52,79 +52,81 @@
                     </div>
                 </div>
             </div>
-            <div class="form-group">    
+            <div class="form-group">
                 <label class="col-sm-3 control-label">物料名称：</label>
                 <div class="col-sm-8">
-                    <input name="materail" class="form-control" type="text">
+                    <select id="material" class="form-control m-b">
+                        <option th:each="material:${materials}" th:value="${material.id}" th:text="${material.name}"></option>
+                    </select>
                 </div>
             </div>
-            <div class="form-group">    
+            <div class="form-group">
                 <label class="col-sm-3 control-label">规格：</label>
                 <div class="col-sm-8">
-                    <input name="spec" class="form-control" type="text">
+                    <input id="spec" name="spec" class="form-control" type="text">
                 </div>
             </div>
-            <div class="form-group">    
+            <div class="form-group">
                 <label class="col-sm-3 control-label">订单数量：</label>
                 <div class="col-sm-8">
                     <input name="orderNumber" class="form-control" type="text">
                 </div>
             </div>
-            <div class="form-group">    
+            <div class="form-group">
                 <label class="col-sm-3 control-label">订单单价：</label>
                 <div class="col-sm-8">
-                    <input name="orderUnitPrice" class="form-control" type="text">
+                    <input id="orderUnitPrice" name="orderUnitPrice" class="form-control" type="text">
                 </div>
             </div>
-            <div class="form-group">    
+            <div class="form-group">
                 <label class="col-sm-3 control-label">订单金额：</label>
                 <div class="col-sm-8">
                     <input name="orderAmount" class="form-control" type="text">
                 </div>
             </div>
-            <div class="form-group">    
+            <div class="form-group">
                 <label class="col-sm-3 control-label">底价：</label>
                 <div class="col-sm-8">
-                    <input name="basePrice" class="form-control" type="text">
+                    <input id="basePrice" name="basePrice" class="form-control" type="text">
                 </div>
             </div>
-            <div class="form-group">    
+            <div class="form-group">
                 <label class="col-sm-3 control-label">底价金额：</label>
                 <div class="col-sm-8">
                     <input name="baseAmount" class="form-control" type="text">
                 </div>
             </div>
-            <div class="form-group">    
+            <div class="form-group">
                 <label class="col-sm-3 control-label">税率：</label>
                 <div class="col-sm-8">
                     <input name="taxRate" class="form-control" type="text">
                 </div>
             </div>
-            <div class="form-group">    
+            <div class="form-group">
                 <label class="col-sm-3 control-label">税金：</label>
                 <div class="col-sm-8">
                     <input name="taxAmount" class="form-control" type="text">
                 </div>
             </div>
-            <div class="form-group">    
+            <div class="form-group">
                 <label class="col-sm-3 control-label">差额：</label>
                 <div class="col-sm-8">
                     <input name="diffAmount" class="form-control" type="text">
                 </div>
             </div>
-            <div class="form-group">    
+            <div class="form-group">
                 <label class="col-sm-3 control-label">返款金额：</label>
                 <div class="col-sm-8">
                     <input name="refundAmount" class="form-control" type="text">
                 </div>
             </div>
-            <div class="form-group">    
+            <div class="form-group">
                 <label class="col-sm-3 control-label">是否提供发票：</label>
                 <div class="col-sm-8">
                     <input name="invoiceProvide" class="form-control" type="text">
                 </div>
             </div>
-            <div class="form-group">    
+            <div class="form-group">
                 <label class="col-sm-3 control-label">返款申请日期：</label>
                 <div class="col-sm-8">
                     <div class="input-group date">
@@ -133,7 +135,7 @@
                     </div>
                 </div>
             </div>
-            <div class="form-group">    
+            <div class="form-group">
                 <label class="col-sm-3 control-label">返款发工厂日期：</label>
                 <div class="col-sm-8">
                     <div class="input-group date">
@@ -142,7 +144,7 @@
                     </div>
                 </div>
             </div>
-            <div class="form-group">    
+            <div class="form-group">
                 <label class="col-sm-3 control-label">返款日期：</label>
                 <div class="col-sm-8">
                     <div class="input-group date">
@@ -151,13 +153,13 @@
                     </div>
                 </div>
             </div>
-            <div class="form-group">    
+            <div class="form-group">
                 <label class="col-sm-3 control-label">批号：</label>
                 <div class="col-sm-8">
                     <input name="batchNumber" class="form-control" type="text">
                 </div>
             </div>
-            <div class="form-group">    
+            <div class="form-group">
                 <label class="col-sm-3 control-label">生产日期：</label>
                 <div class="col-sm-8">
                     <div class="input-group date">
@@ -166,7 +168,7 @@
                     </div>
                 </div>
             </div>
-            <div class="form-group">    
+            <div class="form-group">
                 <label class="col-sm-3 control-label">有效期：</label>
                 <div class="col-sm-8">
                     <div class="input-group date">
@@ -175,13 +177,13 @@
                     </div>
                 </div>
             </div>
-            <div class="form-group">    
+            <div class="form-group">
                 <label class="col-sm-3 control-label">箱号：</label>
                 <div class="col-sm-8">
                     <input name="boxNumber" class="form-control" type="text">
                 </div>
             </div>
-            <div class="form-group">    
+            <div class="form-group">
                 <label class="col-sm-3 control-label">备注：</label>
                 <div class="col-sm-8">
                     <input name="remark" class="form-control" type="text">
@@ -237,6 +239,31 @@
             format: "yyyy-mm-dd",
             minView: "month",
             autoclose: true
+        });
+
+        // 获取物料选择框和规格输入框的元素
+        var materials = [[${materials}]];
+        // 监听物料选择框的变化事件
+        $("#material").change(function() {
+            var selectedMaterial = materials.find(function(material) {
+                return material.id == $("#material").val();
+            });
+            if (selectedMaterial !== undefined && selectedMaterial.spec !== undefined) {
+                $("#spec").val(selectedMaterial.spec);
+                $("#orderUnitPrice").val(selectedMaterial.unitPrice);
+                $("#basePrice").val(selectedMaterial.basePrice);
+            }
+        });
+        // 在初始化时也执行一次，获取初始物料的规格值
+        $(document).ready(function() {
+            var selectedMaterial = materials.find(function(material) {
+                return material.id == $("#material").val();
+            });
+            if (selectedMaterial !== undefined && selectedMaterial.spec !== undefined) {
+                $("#spec").val(selectedMaterial.spec);
+                $("#orderUnitPrice").val(selectedMaterial.unitPrice);
+                $("#basePrice").val(selectedMaterial.basePrice);
+            }
         });
     </script>
 </body>
