--- a/LSY/lsy-admin/src/main/resources/templates/erp/material/material.html
+++ b/LSY/lsy-admin/src/main/resources/templates/erp/material/material.html
@@ -85,11 +85,11 @@
                 },
                 {
                     field: 'unitPrice',
-                    title: '单价'
+                    title: '单价/元'
                 },
                 {
                     field: 'basePrice',
-                    title: '底价'
+                    title: '底价/元'
                 },
                 {
                     title: '操作',
