--- a/LSY/lsy-admin/src/main/resources/templates/login.html
+++ b/LSY/lsy-admin/src/main/resources/templates/login.html
@@ -31,11 +31,11 @@
                     <div class="m-b"></div>
                     <h4>欢迎使用 <strong>ERP管理系统</strong></h4>
                     <ul class="m-b">
-                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> SpringBoot</li>
-                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> Mybatis</li>
-                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> Shiro</li>
-                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> Thymeleaf</li>
-                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> Bootstrap</li>
+                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> 销售</li>
+                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> 研发</li>
+                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> 生产</li>
+                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> 维护</li>
+                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> 渠道</li>
                     </ul>
                     <strong th:if="${isAllowRegister}">还没有账号？ <a th:href="@{/register}">立即注册&raquo;</a></strong>
                 </div>
