--- a/LSY/lsy-admin/src/main/resources/templates/erp/delivery/add.html
+++ b/LSY/lsy-admin/src/main/resources/templates/erp/delivery/add.html
@@ -18,18 +18,6 @@
                 <input name="saler" class="form-control" type="text">
             </div>
         </div>
-
-        <div class="form-group">
-            <label class="col-sm-3 control-label">代理人：</label>
-            <div class="col-sm-3">
-                <input name="agenter" class="form-control" type="text">
-            </div>
-            <label class="col-sm-2 control-label">收货人：</label>
-            <div class="col-sm-3">
-                <input name="receiver" class="form-control" type="text">
-            </div>
-        </div>
-
         <div class="form-group">
             <label class="col-sm-3 control-label">物流单号：</label>
             <div class="col-sm-3">
@@ -37,7 +25,20 @@
             </div>
             <label class="col-sm-2 control-label">客户名称：</label>
             <div class="col-sm-3">
-                <input name="customer" class="form-control" type="text">
+                <select id="customer" name="customer" class="form-control">
+                    <option th:each="customer:${customers}" th:value="${customer.id}"
+                            th:text="${customer.company}"></option>
+                </select>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-3 control-label">代理人：</label>
+            <div class="col-sm-3">
+                <input id="agenter" name="agenter" class="form-control" type="text">
+            </div>
+            <label class="col-sm-2 control-label">收货人：</label>
+            <div class="col-sm-3">
+                <input id="receiver" name="receiver" class="form-control" type="text">
             </div>
         </div>
         <div class="form-group">
@@ -52,7 +53,7 @@
         <div class="form-group">
             <label class="col-sm-3 control-label">物料名称：</label>
             <div class="col-sm-3">
-                <select id="material" name="material" class="form-control m-b">
+                <select id="material" name="material" class="form-control">
                     <option th:each="material:${materials}" th:value="${material.id}"
                             th:text="${material.name}"></option>
                 </select>
@@ -154,32 +155,28 @@
         </div>
         <div class="form-group">
             <label class="col-sm-3 control-label">批号：</label>
-            <div class="col-sm-8">
+            <div class="col-sm-3">
                 <input name="batchNumber" class="form-control" type="text">
+            </div>
+            <label class="col-sm-2 control-label">箱号：</label>
+            <div class="col-sm-3">
+                <input name="boxNumber" class="form-control" type="text">
             </div>
         </div>
         <div class="form-group">
             <label class="col-sm-3 control-label">生产日期：</label>
-            <div class="col-sm-8">
+            <div class="col-sm-3">
                 <div class="input-group date">
                     <input name="productionDate" class="form-control" placeholder="yyyy-MM-dd" type="text">
                     <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
                 </div>
             </div>
-        </div>
-        <div class="form-group">
-            <label class="col-sm-3 control-label">有效期：</label>
-            <div class="col-sm-8">
+            <label class="col-sm-2 control-label">有效期：</label>
+            <div class="col-sm-3">
                 <div class="input-group date">
                     <input name="expirationDate" class="form-control" placeholder="yyyy-MM-dd" type="text">
                     <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
                 </div>
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="col-sm-3 control-label">箱号：</label>
-            <div class="col-sm-8">
-                <input name="boxNumber" class="form-control" type="text">
             </div>
         </div>
         <div class="form-group">
@@ -244,39 +241,15 @@
 
     // 获取物料选择框和规格输入框的元素
     var materials = [[${materials}]];
+    var customers = [[${customers}]];
     var specs = [[${@dict.getType('m_spec')}]];
 
-    // 监听物料选择框的变化事件
-    $("#material").change(function () {
-        var selectedMaterial = materials.find(function (material) {
-            return material.id == $("#material").val();
-        });
-        if (selectedMaterial !== undefined && selectedMaterial.spec !== undefined) {
-            var spec = specs.find(function (spec) {
-                return spec.dictValue === selectedMaterial.spec;
-            });
-            $("#spec").val(spec.dictLabel);
-            $("#orderUnitPrice").val(selectedMaterial.unitPrice);
-            $("#basePrice").val(selectedMaterial.basePrice);
-            orderAmountResult();
-            baseAmountResult();
-        }
-    });
     // 在初始化时也执行一次，获取初始物料的规格值
     $(document).ready(function () {
-        var selectedMaterial = materials.find(function (material) {
-            return material.id == $("#material").val();
-        });
-        if (selectedMaterial !== undefined && selectedMaterial.spec !== undefined) {
-            var spec = specs.find(function (spec) {
-                return spec.dictValue === selectedMaterial.spec;
-            });
-            $("#spec").val(spec.dictLabel);
-            $("#orderUnitPrice").val(selectedMaterial.unitPrice);
-            $("#basePrice").val(selectedMaterial.basePrice);
-        }
+        selectedMaterial();
+        selectedCustomer();
     });
-
+    //监听开票选择事件
     $("#invoiceProvide").change(function () {
         if (this.checked) {
             $("input[name='invoiceProvide']").val(1);  // 勾选时值为 1
@@ -294,7 +267,8 @@
     $("#baseAmount").change(diffAmountResult);
     $("#diffAmount").change(refundAmountResult);
     $("#taxAmount").change(refundAmountResult);
-
+    $("#customer").change(selectedCustomer);
+    $("#material").change(selectedMaterial);
     //计算订单金额
     function orderAmountResult() {
         // 获取输入框1和输入框2的值
@@ -333,7 +307,7 @@
     function taxAmountResult() {
         // 获取输入框1和输入框2的值
         var value1 = parseFloat($("#diffAmount").val()) || 0; // 转换为浮点数，如果无法转换，则默认为 0
-        var value2 = parseFloat($("#taxRate").val())/100 || 0;
+        var value2 = parseFloat($("#taxRate").val()) / 100 || 0;
         // 计算结果并赋值给结果输入框
         var result = value1 * value2;
         $("#taxAmount").val(result.toFixed(2));
@@ -350,6 +324,30 @@
         $("#refundAmount").val(result.toFixed(2));
     }
 
+    // 监听客户选择事件改变代理人和收货人
+    function selectedCustomer() {
+        var selectedCustomer = customers.find(function (customer) {
+            return customer.id == $("#customer").val();
+        });
+        $("#agenter").val(selectedCustomer.agenter);
+        $("#receiver").val(selectedCustomer.receiver);
+    }
+    // 监听物料选择框的变化事件
+    function selectedMaterial() {
+        var selectedMaterial = materials.find(function (material) {
+            return material.id == $("#material").val();
+        });
+        if (selectedMaterial !== undefined && selectedMaterial.spec !== undefined) {
+            var spec = specs.find(function (spec) {
+                return spec.dictValue === selectedMaterial.spec;
+            });
+            $("#spec").val(spec.dictLabel);
+            $("#orderUnitPrice").val(selectedMaterial.unitPrice);
+            $("#basePrice").val(selectedMaterial.basePrice);
+            orderAmountResult();
+            baseAmountResult();
+        }
+    }
 </script>
 </body>
 </html>
