--- a/LSY/lsy-admin/src/main/resources/templates/erp/material/material.html
+++ b/LSY/lsy-admin/src/main/resources/templates/erp/material/material.html
@@ -78,10 +78,7 @@
                 },
                 {
                     field: 'spec',
-                    title: '规格',
-                    formatter: function(value, row, index) {
-                       return $.table.selectDictLabel(specDatas, value);
-                    }
+                    title: '规格'
                 },
                 {
                     field: 'unitPrice',
