--- a/LSY/lsy-admin/src/main/resources/templates/erp/material/add.html
+++ b/LSY/lsy-admin/src/main/resources/templates/erp/material/add.html
@@ -6,27 +6,28 @@
 <body class="white-bg">
     <div class="wrapper wrapper-content animated fadeInRight ibox-content">
         <form class="form-horizontal m" id="form-material-add">
-            <div class="form-group">    
+            <div class="form-group">
                 <label class="col-sm-3 control-label">物料名称：</label>
                 <div class="col-sm-8">
                     <input name="name" class="form-control" type="text">
                 </div>
             </div>
-            <div class="form-group">    
+            <div class="form-group">
                 <label class="col-sm-3 control-label">规格：</label>
                 <div class="col-sm-8">
-                    <select name="spec" class="form-control m-b" th:with="type=${@dict.getType('m_spec')}">
-                        <option th:each="dict : ${type}" th:text="${dict.dictLabel}" th:value="${dict.dictValue}"></option>
-                    </select>
+<!--                    <select name="spec" class="form-control m-b" th:with="type=${@dict.getType('m_spec')}">-->
+<!--                        <option th:each="dict : ${type}" th:text="${dict.dictLabel}" th:value="${dict.dictValue}"></option>-->
+<!--                    </select>-->
+                    <input name="spec" class="form-control" type="text">
                 </div>
             </div>
-            <div class="form-group">    
+            <div class="form-group">
                 <label class="col-sm-3 control-label">单价：</label>
                 <div class="col-sm-8">
                     <input name="unitPrice" class="form-control" type="text">
                 </div>
             </div>
-            <div class="form-group">    
+            <div class="form-group">
                 <label class="col-sm-3 control-label">底价：</label>
                 <div class="col-sm-8">
                     <input name="basePrice" class="form-control" type="text">
