--- a/LSY/lsy-admin/src/main/resources/templates/erp/material/edit.html
+++ b/LSY/lsy-admin/src/main/resources/templates/erp/material/edit.html
@@ -7,27 +7,28 @@
     <div class="wrapper wrapper-content animated fadeInRight ibox-content">
         <form class="form-horizontal m" id="form-material-edit" th:object="${dlMaterial}">
             <input name="id" th:field="*{id}" type="hidden">
-            <div class="form-group">    
+            <div class="form-group">
                 <label class="col-sm-3 control-label">物料名称：</label>
                 <div class="col-sm-8">
                     <input name="name" th:field="*{name}" class="form-control" type="text">
                 </div>
             </div>
-            <div class="form-group">    
+            <div class="form-group">
                 <label class="col-sm-3 control-label">规格：</label>
                 <div class="col-sm-8">
-                    <select name="spec" class="form-control m-b" th:with="type=${@dict.getType('m_spec')}">
-                        <option th:each="dict : ${type}" th:text="${dict.dictLabel}" th:value="${dict.dictValue}" th:field="*{spec}"></option>
-                    </select>
+<!--                    <select name="spec" class="form-control m-b" th:with="type=${@dict.getType('m_spec')}">-->
+<!--                        <option th:each="dict : ${type}" th:text="${dict.dictLabel}" th:value="${dict.dictValue}" th:field="*{spec}"></option>-->
+<!--                    </select>-->
+                    <input name="spec" th:field="*{spec}" class="form-control" type="text">
                 </div>
             </div>
-            <div class="form-group">    
+            <div class="form-group">
                 <label class="col-sm-3 control-label">单价：</label>
                 <div class="col-sm-8">
                     <input name="unitPrice" th:field="*{unitPrice}" class="form-control" type="text">
                 </div>
             </div>
-            <div class="form-group">    
+            <div class="form-group">
                 <label class="col-sm-3 control-label">底价：</label>
                 <div class="col-sm-8">
                     <input name="basePrice" th:field="*{basePrice}" class="form-control" type="text">
