--- a/LSY/lsy-admin/src/main/resources/templates/login.html
+++ b/LSY/lsy-admin/src/main/resources/templates/login.html
@@ -31,11 +31,10 @@
                     <div class="m-b"></div>
                     <h4>欢迎使用 <strong>ERP管理系统</strong></h4>
                     <ul class="m-b">
-                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> 销售</li>
-                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> 研发</li>
-                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> 生产</li>
-                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> 维护</li>
-                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> 渠道</li>
+                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> 以人为本</li>
+                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> 以心制药</li>
+                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> 以德立业</li>
+                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> ---------企业理念</li>
                     </ul>
                     <strong th:if="${isAllowRegister}">还没有账号？ <a th:href="@{/register}">立即注册&raquo;</a></strong>
                 </div>
@@ -43,7 +42,7 @@
             <div class="col-sm-5">
                 <form id="signupForm" autocomplete="off">
                     <h4 class="no-margins">登录：</h4>
-                    <p class="m-t-md">你若不离不弃，我必生死相依</p>
+                    <p class="m-t-md">关爱健康</p>
                     <input type="text"     name="username" class="form-control uname"     placeholder="用户名" value="admin"    />
                     <input type="password" name="password" class="form-control pword"     placeholder="密码"   value="admin123" />
 					<div class="row m-t" th:if="${captchaEnabled==true}">
