--- a/LSY/lsy-admin/src/main/resources/templates/login.html
+++ b/LSY/lsy-admin/src/main/resources/templates/login.html
@@ -23,18 +23,18 @@
 <body class="signin">
     <div class="signinpanel">
         <div class="row">
-            <div class="col-sm-7">
+            <div class="col-sm-5">
                 <div class="signin-info">
                     <div class="logopanel m-b">
-                        <h1><img alt="[ 若依 ]" src="../static/ruoyi.png" th:src="@{/ruoyi.png}"></h1>
+                        <h1><img alt="[ 若依 ]" src="../static/meijun.png" th:src="@{/meijun.png}"></h1>
                     </div>
                     <div class="m-b"></div>
                     <h4>欢迎使用 <strong>ERP管理系统</strong></h4>
                     <ul class="m-b">
-                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> 以人为本</li>
-                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> 以心制药</li>
-                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> 以德立业</li>
-                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> ---------企业理念</li>
+                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i>以人为本</li>
+                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i>以心制药</li>
+                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i>以德立业</li>
+                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i>---------企业理念</li>
                     </ul>
                     <strong th:if="${isAllowRegister}">还没有账号？ <a th:href="@{/register}">立即注册&raquo;</a></strong>
                 </div>
@@ -43,8 +43,8 @@
                 <form id="signupForm" autocomplete="off">
                     <h4 class="no-margins">登录：</h4>
                     <p class="m-t-md">关爱健康</p>
-                    <input type="text"     name="username" class="form-control uname"     placeholder="用户名" value="admin"    />
-                    <input type="password" name="password" class="form-control pword"     placeholder="密码"   value="admin123" />
+                    <input type="text"     name="username" class="form-control uname"     placeholder="用户名"     />
+                    <input type="password" name="password" class="form-control pword"     placeholder="密码"    />
 					<div class="row m-t" th:if="${captchaEnabled==true}">
 						<div class="col-xs-6">
 						    <input type="text" name="validateCode" class="form-control code" placeholder="验证码" maxlength="5" />
@@ -64,7 +64,7 @@
         </div>
         <div class="signup-footer">
             <div class="pull-left">
-                Copyright © 2018-2023 ruoyi.vip All Rights Reserved. <br>
+                Copyright © 2013-2024 meijun All Rights Reserved. <br>
             </div>
         </div>
     </div>
